--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="https://raw.githubusercontent.com/mysteryBSC/Images/main/photo_2023-06-23_00-21-44-removebg-preview.png" alt="Google Logo" class="logo">
+    <img src="https://raw.githubusercontent.com/mysteryBSC/Images/main/THE%20GREAT%20FIGHT.jpg" alt="Google Logo" class="logo">
     <h1>The Great Fight : Musk vs Zuck !</h1>
 <div class="narrative">
 <p>We have to launch 2 tokens, $MUSKPUNCH and $ZUCKPUNCH. All tokens will be community driven. No Team Token. No Buy taxes.
