--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <img src="https://raw.githubusercontent.com/mysteryBSC/Images/main/TWITTER.jpg" alt="Google Logo" class="logo">
     <h1>The Great Fight : Musk vs Zuck !</h1>
 <div class="narrative">
-<p>We have to launch 2 tokens, $MUSKPUNCH and $ZUCKPUNCH. All tokens will be community driven. No Team Token. No Buy taxes.
+<p>We have to launch tokens on Venom Ecosystem also on BNB-Chain. All tokens will be community driven. No Team Token. No Buy taxes.</p>
 <p>Two days ago, I tweeted about META’s competitor to Twitter called ‘Threads’. I took a few jabs at Meta, then referenced their Chief Product Officer saying how they’ve "been hearing from creators and public figures who are interested in having a platform that is sanely run."</p>
 <p>Elon saw the tweet and promptly responded facetiously by saying, "I'm sure Earth can't wait to be exclusively under Zuck's thumb with no other options. At least it will be 'sane.' Was worried there for a moment 😅."</p>
 <p>A Twitter user responded to Elon’s comment by saying, "Better be careful, 
