--- a/index.html
+++ b/index.html
@@ -37,8 +37,14 @@ What do you think: Elon Musk vs Mark Zuckerberg, WHO WINS? </p>
     </div>
     
     <div class="logos">
+      <div class="logos">
+      <img src="https://raw.githubusercontent.com/mysteryBSC/Images/main/MUSK__5_-removebg-preview.png">
       <img src="https://upload.wikimedia.org/wikipedia/commons/e/e8/Tesla_logo.png" alt="Google Logo">
+      <img src="https://forum.venom.foundation/uploads/default/original/1X/b3968417a3803e7629c64f4750b26061ddc990c3.svg" alt="Google Logo">
+      <img src="https://club.numi.net/public/numinumilogo.svg" alt="Google Logo">
+      <img src="https://testnet.oasis.gallery/images/logo.svg">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/Facebook_f_logo_%282019%29.svg/2048px-Facebook_f_logo_%282019%29.svg.png" alt="Google Logo">
+      <img src="https://raw.githubusercontent.com/mysteryBSC/Images/main/ZUCK__5_-removebg-preview.png">
     </div>
     <div class="comments-box">
       <h2>Comments</h2>
